fixed alignment

--- a/index/static/css/navbar_styles.css
+++ b/index/static/css/navbar_styles.css
@@ -8,7 +8,7 @@
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
-  background-position: 50% 300%;
+  background-position: 50% 160%;
   background-repeat: no-repeat;
   background-size: cover;
 
